-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0
-
Windows 10, qmake & qbs
-
300afe8b8d3a919b2e4d7e5f30e9d4dfd341eb1d, fee6a037b7b28afdc2dfd6297eb089d3e5888ff7 (qbs)
After the upgrade from Qt Creator 4.5.0 the user interface reacts very slow if a medium to large project is opened. Even if it looks the project is completely loaded the user interface seems to not very responsive compared to Qt Creator 4.5. Even opening a couple iof source files in a row makes the UI very slow and shows a cpu load of 15%-20% for about 10-15 Seconds. Such a behavior i did not notice with Qt Creator 4.5. So the Creator is not usable for me.
For Gerrit Dashboard: QTCREATORBUG-20175 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
225317,3 | AutoTest: Replace expensive function call | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
225346,2 | QbsProjectManager: Cache run environment | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
226016,2 | setupRunEnv: Visit each product dependency only once | 1.11 | qbs/qbs | Status: MERGED | +2 | 0 |