AutoTest: Replace expensive function call

Depending on the underlying project manager it can be
pretty expensive calling PE::canRunStartupProject().
AutoTest plugin used this to determine whether its
global actions should be enabled or not and updating
these actions is triggered for too many causes.

Replace this function call by some simple checks that
have almost no cost to avoid blocking UI.

Task-number: QTCREATORBUG-20175
Change-Id: I0e3cce683f33abe82bf1354ec5276250f5e30068
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>